samples/_failures_safe/1761043819_579863_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db207695.c: In function ‘main’:
./samples/SAFE/__tmp_db207695.c:160:29: error: expected ‘]’ at end of input
  160 |     if (len > 0 && input[len
      |                             ^
      |                             ]
./samples/SAFE/__tmp_db207695.c:160:5: error: expected declaration or statement at end of input
  160 |     if (len > 0 && input[len
      |     ^~
